--- a/Assignment/Day5_LEDBoard/Day5_LEDBoard/Base.lproj/LaunchScreen.storyboard
+++ b/Assignment/Day5_LEDBoard/Day5_LEDBoard/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mono_launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hsw-tE-8g7">
-                                <rect key="frame" x="295" y="76" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mono_launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hsw-tE-8g7">
+                                <rect key="frame" x="44" y="0.0" width="808" height="393"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hsw-tE-8g7" secondAttribute="trailing" id="GTD-jb-449"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hsw-tE-8g7" secondAttribute="bottom" id="QmL-kz-OxU"/>
+                            <constraint firstItem="Hsw-tE-8g7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pFH-nO-KFX"/>
+                            <constraint firstItem="Hsw-tE-8g7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qs9-iq-7uk"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
