--- a/Assignment/Day5_newlyConiedWord/Day5_newlyConiedWord/Base.lproj/Main.storyboard
+++ b/Assignment/Day5_newlyConiedWord/Day5_newlyConiedWord/Base.lproj/Main.storyboard
@@ -1,24 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Day5_newlyConiedWord" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2oN-9o-eq4">
+                                <rect key="frame" x="20" y="68" width="374" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="텍스트" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Op1-1e-JgQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="324" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R84-nB-jwo">
+                                        <rect key="frame" x="324" y="0.0" width="50" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="8gr-0C-Bqa"/>
+                                        </constraints>
+                                        <state key="normal" image="magnifyingglass" catalog="system"/>
+                                        <connections>
+                                            <action selector="clickSearchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WkK-sv-SwL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="6Ob-n2-cZH"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b23-YN-g1c">
+                                <rect key="frame" x="20" y="138" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="yex-oo-LqM"/>
+                                </constraints>
+                                <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="2" maxY="0.0"/>
+                                <state key="normal" title="만반잘부"/>
+                                <connections>
+                                    <action selector="clickTagButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u0e-uX-x7I"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4uD-3f-FYf">
+                                <rect key="frame" x="98" y="138" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="SJ8-Pj-MJH"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="clickTagButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fn6-ML-kRC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8YT-qT-x2e">
+                                <rect key="frame" x="176" y="138" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="CIY-6H-guQ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="clickTagButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lmw-F0-yrs"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agD-yf-ulN">
+                                <rect key="frame" x="254" y="138" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="ZFe-4V-dHF"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="clickTagButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b5P-eh-hnQ"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="sjE-DO-YpR">
+                                <rect key="frame" x="20" y="266" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="g11-jI-yOb"/>
+                                    <constraint firstAttribute="height" constant="374" id="iNq-EL-80T"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xub-le-Npb">
+                                <rect key="frame" x="60" y="453" width="294" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="2oN-9o-eq4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="079-8v-sUY"/>
+                            <constraint firstItem="8YT-qT-x2e" firstAttribute="leading" secondItem="4uD-3f-FYf" secondAttribute="trailing" constant="8" id="8mj-op-u8k"/>
+                            <constraint firstItem="b23-YN-g1c" firstAttribute="top" secondItem="2oN-9o-eq4" secondAttribute="bottom" constant="20" id="C6H-xG-wbS"/>
+                            <constraint firstItem="sjE-DO-YpR" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="E9n-Wd-4uV"/>
+                            <constraint firstItem="b23-YN-g1c" firstAttribute="centerY" secondItem="4uD-3f-FYf" secondAttribute="centerY" id="O0Z-eX-7Zg"/>
+                            <constraint firstItem="Xub-le-Npb" firstAttribute="centerX" secondItem="sjE-DO-YpR" secondAttribute="centerX" id="SVs-g9-vZv"/>
+                            <constraint firstItem="b23-YN-g1c" firstAttribute="centerY" secondItem="agD-yf-ulN" secondAttribute="centerY" id="Uhj-ZE-Qys"/>
+                            <constraint firstItem="b23-YN-g1c" firstAttribute="centerY" secondItem="8YT-qT-x2e" secondAttribute="centerY" id="WCv-NH-RMf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xub-le-Npb" secondAttribute="trailing" constant="60" id="XLq-lp-uPh"/>
+                            <constraint firstItem="Xub-le-Npb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="YzA-pW-835"/>
+                            <constraint firstItem="agD-yf-ulN" firstAttribute="leading" secondItem="8YT-qT-x2e" secondAttribute="trailing" constant="8" id="akW-E7-nnB"/>
+                            <constraint firstItem="2oN-9o-eq4" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="d7s-dG-tnb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2oN-9o-eq4" secondAttribute="trailing" constant="20" id="gN7-m5-csL"/>
+                            <constraint firstItem="Xub-le-Npb" firstAttribute="centerY" secondItem="sjE-DO-YpR" secondAttribute="centerY" id="q0K-r7-ImU"/>
+                            <constraint firstItem="sjE-DO-YpR" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qVI-eI-DV0"/>
+                            <constraint firstItem="4uD-3f-FYf" firstAttribute="leading" secondItem="b23-YN-g1c" secondAttribute="trailing" constant="8" id="u3O-S9-CZy"/>
+                            <constraint firstItem="b23-YN-g1c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zRX-as-2Bv"/>
+                        </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="PA3-I9-ehr" appends="YES" id="PFH-o1-dmg"/>
+                        </connections>
                     </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="Xub-le-Npb" id="l8p-Xf-I53"/>
+                        <outlet property="searchButton" destination="R84-nB-jwo" id="lzv-wI-fxZ"/>
+                        <outlet property="searchStackView" destination="2oN-9o-eq4" id="eIX-i1-cEt"/>
+                        <outlet property="tagButton1" destination="b23-YN-g1c" id="GRf-xE-gA9"/>
+                        <outlet property="tagButton2" destination="4uD-3f-FYf" id="P1i-9l-QAh"/>
+                        <outlet property="tagButton3" destination="8YT-qT-x2e" id="Z05-dl-mky"/>
+                        <outlet property="tagButton4" destination="agD-yf-ulN" id="Ado-y6-Rfk"/>
+                        <outlet property="userTextField" destination="Op1-1e-JgQ" id="UnL-PI-glx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="PA3-I9-ehr">
+                    <connections>
+                        <action selector="clickTap:" destination="BYZ-38-t0r" id="rfA-ag-TZj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="65.625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="300" height="300"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
