--- a/Assignment/Day5_LEDBoard/Day5_LEDBoard/Base.lproj/LaunchScreen.storyboard
+++ b/Assignment/Day5_LEDBoard/Day5_LEDBoard/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mono_launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="gF1-9F-aGC">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mono_launch" translatesAutoresizingMaskIntoConstraints="NO" id="gF1-9F-aGC">
                                 <rect key="frame" x="44" y="0.0" width="808" height="393"/>
                             </imageView>
                         </subviews>
@@ -36,7 +36,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="mono_launch.png" width="2208" height="1242"/>
+        <image name="mono_launch" width="2208" height="1242"/>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
