--- a/Assignment/13TrendMedia/13TrendMedia/Source/Cells/TrendCell.xib
+++ b/Assignment/13TrendMedia/13TrendMedia/Source/Cells/TrendCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -115,10 +116,25 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUp-tt-IfE">
+                                <rect key="frame" x="309" y="20" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="GUp-tt-IfE" secondAttribute="height" multiplier="1:1" id="xnk-fK-mId"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="link.circle.fill" catalog="system" symbolScale="large"/>
+                                </state>
+                                <connections>
+                                    <action selector="linkButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IVz-kR-Sdn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="GUp-tt-IfE" firstAttribute="top" secondItem="0rJ-4q-FU8" secondAttribute="top" constant="20" id="1p0-fh-VR5"/>
                             <constraint firstItem="DP4-kS-ms3" firstAttribute="top" secondItem="0rJ-4q-FU8" secondAttribute="top" id="4Hq-g2-aFp"/>
+                            <constraint firstAttribute="trailing" secondItem="GUp-tt-IfE" secondAttribute="trailing" constant="20" id="9Py-br-tt2"/>
                             <constraint firstItem="7fT-BF-g77" firstAttribute="leading" secondItem="dWn-3t-Eqz" secondAttribute="leading" id="BF7-eE-VPV"/>
                             <constraint firstAttribute="trailing" secondItem="DP4-kS-ms3" secondAttribute="trailing" id="Bmr-iX-6JO"/>
                             <constraint firstItem="dWn-3t-Eqz" firstAttribute="leading" secondItem="0rJ-4q-FU8" secondAttribute="leading" constant="20" id="GSe-Lg-rYz"/>
@@ -168,6 +184,7 @@
     </objects>
     <resources>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <image name="link.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
