--- a/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Cast.storyboard
+++ b/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Cast.storyboard
@@ -54,8 +54,55 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="OverviewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OverviewCell" rowHeight="154" id="zSb-oy-OP1" customClass="OverviewCell" customModule="_3TrendMedia" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="228" width="414" height="154"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zSb-oy-OP1" id="VrV-nP-f2d">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="154"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pmo-xY-H59">
+                                                    <rect key="frame" x="0.0" y="110" width="414" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="G1q-yT-peQ"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal">
+                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                                    </state>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPj-ZY-0Ge">
+                                                    <rect key="frame" x="8" y="8" width="398" height="94"/>
+                                                    <string key="text">The moment that you took my hand
+Was the best thing that ever happened
+Yeah, the moment that we started a band
+Was the best thing that ever happened
+And I wish that we could do it again
+It was the best thing that ever happened to me
+It was the best thing that ever happened to me
+It was the best that ever happened</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="pmo-xY-H59" secondAttribute="trailing" id="7tb-LK-jRS"/>
+                                                <constraint firstItem="KPj-ZY-0Ge" firstAttribute="leading" secondItem="VrV-nP-f2d" secondAttribute="leading" constant="8" id="I0B-xC-qKr"/>
+                                                <constraint firstItem="pmo-xY-H59" firstAttribute="leading" secondItem="VrV-nP-f2d" secondAttribute="leading" id="Rgd-Q5-XAS"/>
+                                                <constraint firstAttribute="trailing" secondItem="KPj-ZY-0Ge" secondAttribute="trailing" constant="8" id="mRj-w7-obx"/>
+                                                <constraint firstItem="pmo-xY-H59" firstAttribute="top" secondItem="KPj-ZY-0Ge" secondAttribute="bottom" constant="8" id="s7n-84-2R9"/>
+                                                <constraint firstAttribute="bottom" secondItem="pmo-xY-H59" secondAttribute="bottom" id="ufz-bs-yri"/>
+                                                <constraint firstItem="KPj-ZY-0Ge" firstAttribute="top" secondItem="VrV-nP-f2d" secondAttribute="top" constant="8" id="xNb-Rm-qFF"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="overviewButton" destination="pmo-xY-H59" id="f43-tR-CKQ"/>
+                                            <outlet property="overviewLabel" destination="KPj-ZY-0Ge" id="djt-vj-ILe"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CastCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" showsReorderControl="YES" indentationWidth="10" reuseIdentifier="CastCell" rowHeight="61" id="97u-Tw-7JT" customClass="CastCell" customModule="_3TrendMedia" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="228" width="414" height="61"/>
+                                        <rect key="frame" x="0.0" y="382" width="414" height="61"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="97u-Tw-7JT" id="fCH-sR-dYa">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="61"/>
