--- a/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Cast.storyboard
+++ b/Assignment/13TrendMedia/13TrendMedia/Resource/Storyboards/Cast.storyboard
@@ -71,16 +71,8 @@
                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                     </state>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPj-ZY-0Ge">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPj-ZY-0Ge">
                                                     <rect key="frame" x="8" y="8" width="398" height="94"/>
-                                                    <string key="text">The moment that you took my hand
-Was the best thing that ever happened
-Yeah, the moment that we started a band
-Was the best thing that ever happened
-And I wish that we could do it again
-It was the best thing that ever happened to me
-It was the best thing that ever happened to me
-It was the best that ever happened</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
